--- a/Blazor/Gestao/Gestao/appsettings.json
+++ b/Blazor/Gestao/Gestao/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Gestao;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=API4;Username=postgres;Password=postgres"
   },
   "Logging": {
     "LogLevel": {
@@ -13,8 +13,8 @@
     "Server": "smtp.gmail.com",
     "Port": 587,
     "SSL": true,
-    "User": "elias.ribeiro.s@gmail.com",
-    "Password": "ktxo dgnk nspr mtzx"
+    "User": "odedicado@gmail.com",
+    "Password": "uydg fnra wsik ldge"
   },
   "Pagination": {
     "PageSize": 15
